# CrunchIO

./: .envrc  .gitattributes  .gitignore  .markdownlint.json  Cargo.toml  LICENSE  README.md  api-type-definition.md  clippy.toml  instances_types.json  justfile  penser.md  rust-toolchain.toml
archive/: api-type-definition.md
crunchio/: Cargo.toml
crunchio/src/: error.rs  lib.rs
crunchio/src/_to_migrate_/: error.rs
crunchio/src/_to_migrate_/images/: mod.rs
crunchio/src/_to_migrate_/instance_availability/: mod.rs
crunchio/src/_to_migrate_/instance_types/: mod.rs
crunchio/src/_to_migrate_/instances/: mod.rs
crunchio/src/_to_migrate_/locations/: mod.rs
crunchio/src/_to_migrate_/session/: mod.rs
crunchio/src/_to_migrate_/ssh_keys/: mod.rs
crunchio/src/_to_migrate_/startup_scripts/: mod.rs
crunchio/src/_to_migrate_/volume_types/: mod.rs
crunchio/src/_to_migrate_/volumes/: mod.rs
crunchio/src/balance/: mod.rs
crunchio/src/blocking/: balance.rs  mod.rs  session.rs
crunchio/src/instance_availability/: mod.rs
crunchio/src/lib/: error.rs  mod.rs
crunchio/src/lib/_shared_/: mod.rs
crunchio/src/lib/balance/: mod.rs
crunchio/src/lib/images/: mod.rs
crunchio/src/lib/instance_availability/: mod.rs
crunchio/src/lib/instance_types/: mod.rs
crunchio/src/lib/instances/: mod.rs
crunchio/src/lib/session/: mod.rs
crunchio/src/lib/ssh_keys/: mod.rs
crunchio/src/lib/startup_scripts/: mod.rs
crunchio/src/lib/volume_types/: mod.rs
crunchio/src/lib/volumes/: mod.rs
crunchio/src/locations/: mod.rs
crunchio/src/no_blocking/: balance.rs  mod.rs  session.rs  ssh_keys.rs
crunchio/src/schema/: balance.rs  cpu_info.rs  credentials.rs  currency.rs  gpu_info.rs  image.rs  instance_availability.rs  instance_type.rs  location.rs  location_code.rs  memory.rs  mod.rs  session.rs  ssh_add_key_body.rs  ssh_deleted_keys.rs  ssh_keys.rs  storage_type.rs  volume_status.rs  volume_type.rs
crunchio/src/session/: credentials.rs
crunchio/src/ssh_keys/: mod.rs
crunchio/src/volume_types/: mod.rs
crunchio/tests/: async-ssh-keys.rs  async-user-balance.rs  blocking-ssh-keys.rs  blocking-user-balance.rs  images.rs  instance-availability.rs  instance-types.rs  instances.rs  locations.rs  ssh-keys.rs  startup-scripts.rs  user-balance.rs  volume-types.rs  volumes.rs
crunchio/tests/_to_migrate_/: images.rs  instance-availability.rs  instance-types.rs  instances.rs  locations.rs  startup-scripts.rs  volume-types.rs  volumes.rs
crunchio/tests/assets/: key.in
dbron/: image-types.ron  instances-types.ron  locations.ron
dionos/: Cargo.toml
dionos/src/: lib.rs
dionos/tests/: record.rs
examples/: readme.md
examples/axedv/: Cargo.toml  README.md
examples/axedv/examples/: quick_dev.rs
examples/axedv/src/: main.rs
examples/builder/: Cargo.toml
examples/builder/src/: main.rs  old.rs
examples/sandbox/: Cargo.toml
examples/sandbox/src/: main.rs
examples/segments/: Cargo.toml
examples/segments/src/: main.rs
examples/types/: Cargo.toml
examples/types/src/: main.rs
routers/: Cargo.toml
routers/src/: lib.rs
spec/: balance.md  image.md  locations.md  startup-scripts.md
src/: main.rs
src/lib/: constants.rs  credentials.rs  endpoints.rs  error.rs  mod.rs  session.rs  utils.rs
src/lib/_shared_/: mod.rs
src/lib/balance/: mod.rs
src/lib/images/: mod.rs
src/lib/instance_availability/: mod.rs
src/lib/instance_types/: mod.rs
tests/: data-crunchio-api.rs  images.rs  instances.rs  locations.rs  ssh-keys.rs  startup-scripts.rs  user-balance.rs  volumes.rs
(+22 files in other folders)
