[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"
ureq = { version = "*", features = ["json", "charset"] }
cliclack = "0.1.8"
console = "0.15.7"
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }


[lib]
name = "crunchio"
path = "src/lib/mod.rs"

[[bin]]
name = "crunchio"
path = "src/main.rs"

[[bin]]
name = "timer"
path = "src/bin/timer.rs"

[[bin]]
name = "click"
path = "src/bin/click.rs"
