[package]
name = "crunchio"
version = "0.10.0"
authors = ["El Ayar Yacine <elayar.yacine@gmail.com>"]
license = "MIT"
description = "A blocking/no_blocking HTTP client for DataCrunchIO API"
repository = "https://github.com/zurgl/CrunchIO"
keywords = ["DataCrunchIO", "api", "web", "client", "http"]
categories = ["http-client"]
edition = "2021"
rust-version = "1.72"
readme = "README.md"
exclude = ["/dionos/**/*", "/.vscode/**/*", ".envrc", ".gitattributes"]

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
http = "0.2"
thiserror = { version = "1.0" }
url = { version = "2.4.1", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
ureq = { version = "2.8", features = [
  "json",
  "charset",
], default-features = true, optional = true }
reqwest = { version = "0.11.21", optional = true, default-features = true, features = [
  "json",
] }
async-trait = { version = "0.1.73", optional = true, default-features = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[lib]
name = "crunchio"
path = "src/lib.rs"

[features]
default = ["blocking", "async"]
blocking = ["ureq"]
async = ["reqwest", "async-trait"]
