[package]
name = "dionos"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
ureq = { version = "2.8", features = ["json", "charset"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[lib]
name = "dionos"
path = "src/lib.rs"
